# audio-transcriber

./: .dockerignore  .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  EXPORT_FEATURE.md  GUI_GUIDE.md  HOMEBREW.md  Justfile  PROGRESS_FEATURE.md  PROJECT_GUIDELINES.md  PYPI_PUBLISH.md  QUICKSTART.md  README.md  ROADMAP.md  SUMMARIZATION_FEATURE.md  audio_transcriber.py  build_binary.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.sh
.clinerules/: 01.rule.md
.github/workflows/: build-binaries.yml  ci-binary.yml  ci-build.yml  ci-lint.yml  ci-tests.yml  ci-typecheck.yml  ci.yml  publish-to-pypi.yml
Rules/: 00.secrets.md  01.rule.md  02.ci.rule.md  03.repo.rule.md
docker/: Dockerfile  entrypoint.sh
docs/: CONTRIBUTING.md  DIARIZATION_FEATURE.md  DOCKER.md  EXPORT_FEATURE.md  GUI_GUIDE.md  PROJECT_GUIDELINES.md  PYPI_PUBLISH.md  QUICKSTART.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md
examples/: EXAMPLES.md
scripts/: bootstrap.sh  build_binary.py
src/audio_transcriber/: __init__.py  __main__.py  cli.py  constants.py  diarizer.py  env.py  exporter.py  gui.py  i18n.py  merger.py  progress.py  segmenter.py  transcriber.py  utils.py
src/audio_transcriber/gui/: __init__.py  __main__.py  main.py  utils.py
src/audio_transcriber/gui/tabs/: __init__.py  api_tab.py  diarization_tab.py  export_tab.py  main_tab.py  preview_tab.py  summary_tab.py  transcription_tab.py
src/audio_transcriber/gui/widgets/: __init__.py  progress.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  test_cli.py  test_gui.py  test_merger.py  test_segmenter.py  test_transcriber.py  test_utils.py
