[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-transcriber"
version = "1.0.6"
description = "Professional audio transcription tool using OpenAI-compatible Speech-to-Text APIs with intelligent segmentation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Audio Transcriber Contributors"},
]
keywords = [
    "transcription",
    "audio",
    "speech-to-text",
    "openai",
    "whisper",
    "podcast",
    "subtitles",
    "srt",
    "vtt",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.30.0",
    "pydub>=0.25.1",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/lucmuss/audio-transcriber"
Documentation = "https://github.com/lucmuss/audio-transcriber#readme"
Repository = "https://github.com/lucmuss/audio-transcriber"
Issues = "https://github.com/lucmuss/audio-transcriber/issues"
Changelog = "https://github.com/lucmuss/audio-transcriber/releases"

[project.scripts]
audio-transcriber = "audio_transcriber.cli:main"
audio-transcriber-gui = "audio_transcriber.gui:main"

[tool.setuptools]
packages = ["audio_transcriber"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
audio_transcriber = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = ["E203", "E501", "E402", "F401"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    "ENV",
    "build",
    "dist",
    "*.egg-info",
    ".tox",
    ".eggs",
    ".pytest_cache",
    ".mypy_cache",
    "examples",
    "docs",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = ["src/audio_transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=audio_transcriber",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
